Final Draft of RMD file

--- a/Droughts_Final_Writeup.Rmd
+++ b/Droughts_Final_Writeup.Rmd
@@ -127,7 +127,7 @@ droughts_copy$score_olr <- factor(droughts_copy$score_r, levels = c(0, 1, 2, 3, 
 ```
 
 ```{r}
-train_rows <- createDataPartition(score_olr, p = 0.5, list = FALSE)
+train_rows <- createDataPartition(droughts_copy$score_olr, p = 0.5, list = FALSE)
 droughts_train <- droughts_copy[train_rows, ]
 droughts_test <- droughts_copy[-train_rows, ]
 ```
@@ -232,7 +232,7 @@ X_train <- X_train[]
 
 y_train <- droughts_train$score
 
-X_test <- model.matrix(score ~ PRECTOT + WS10M + T2M, data = droughts_lr)
+X_test <- model.matrix(score ~ PRECTOT + WS10M + T2M, data = droughts_test)
 X_test <- X_test[]
 
 y_test <- droughts_test$score
